# inih-feedstock

./: README.md
.github/workflows/: autoupload.yml
recipe/: CMakeLists.txt  build.sh  conda_build_config.yaml  meta.yaml
